# scattering_transform

./: .gitignore  classification_MNIST.ipynb  process_IW_stack.ipynb  pyproject.toml
scattering/: AlphaScattering2d_cov.py
